--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,13 @@
     html, body{
       font-family: sans-serif;
       color: #4a4a4a;
+      text-align: center;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
   </style>
 </head>
